--- a/tr-a-b.html
+++ b/tr-a-b.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv = "refresh" content = "1; url = pag-b-informacion.html" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +12,7 @@
   />
     <link rel="shortcut icon" href="clas" type="image/x-icon">
     <script src="https://kit.fontawesome.com/9ea1a752b1.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>CHULO | INFORMACION</title>
 </head>
 <body class="background">
     <!-- Header de la pagina -->
@@ -21,12 +22,12 @@
         </div>
     </div>
     
-    <br> 
+    <br><br> 
     <!-- Links varios, incluyen la ANIMACION -->
     <div class="container">
         <!-- izq, informacion -->
-        <div class="item animate__animated animate__fadeInLeft">
-            <a href="home-informacion.html">
+        <div class="item animate__animated animate__fadeOutLeft">
+            <a href="info-page.html">
                 <img src="Recursos/info.png" alt="INFORMACION">
             </a>
         </div>
@@ -39,16 +40,17 @@
         </div>
 
         <!-- der, contacto -->
-        <div class="item animate__animated animate__fadeInRight">
-            <a href="home-contacto.html">
+        <div class="item animate__animated animate__fadeOutRight">
+            <a href="contact-page.html">
                 <img src="Recursos/contacto.png" alt="CONTACTO">
             </a>
         </div>
+
     </div>
 
     <br><br><br><br><br><br><br><br><br><br>
     <!-- el actual content de la pag -->
-    <div class="container cuerpo suelto">
+    <div class="container cuerpo suelto animate__animated animate__fadeOutDown">
         <div class="item">
             <div class="square wht-bg">
                 <img class="stock-images"src="Recursos/stock-crocs.jpg" alt="Crocs Rosas">
@@ -75,7 +77,7 @@
         </div>
     </div>
     <br>
-    <div class="container cuerpo suelto">
+    <div class="container cuerpo suelto animate__animated animate__fadeOutDown">
         <div class="item cuerpo bl-bg descripcion">
             <div class="header-text">CROCS ROSAS</div>
             <p>PRECIO: $500</p>
@@ -101,5 +103,6 @@
                 <p>TALLES: S-XL</p>
             </div>
     </div> 
+
 </body>
 </html>
