--- a/tr-a-c.html
+++ b/tr-a-c.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv = "refresh" content = "1; url = contact-page.html" />
+    <meta http-equiv = "refresh" content = "1; url = pag-c-contacto.html" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
     />
     <link rel="shortcut icon" href="clas" type="image/x-icon">
     <script src="https://kit.fontawesome.com/9ea1a752b1.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>CHULO | CONTACTO</title>
 </head>
 <body class="background">
     <img class="animate__animated animate__backInDown" src="Recursos/black.png" alt="">
