--- a/pag-c-contacto.html
+++ b/pag-c-contacto.html
@@ -19,19 +19,15 @@
 <header>
     <br><br><br>
     <div class="container">
-        <div class="row align-items-lg-center">
-            <div class="col">
-            <!-- relleno para las columnas -->
-            </div>
-            <!-- centro, home -->
-            <div class="col animate__animated animate__flipInX">
-                <a href="pag-a-home.html">
-                    <img class="img-fluid" src="Recursos/titulo-wht.png" alt="CHULO">
-                </a>
-            </div>
-            <div class="col"></div>
-            <!-- relleno para las columnas -->
-            </div>
+        <div class="row">
+		<div class="col-lg-12">
+        	    <!-- centro, home -->
+	            <div class="col animate__animated animate__flipInX">
+        	        <a href="pag-a-home.html">
+	    	            <img class="mx-auto d-block" src="titulo-wht.png" alt="CHULO" style="width: 320px;margin=0 auto;">
+               		</a>
+		    </div>
+		</div>
         </div>
     </div>
     <br><br>
