Pagina Para Entragar

--- a/informacion.html
+++ b/informacion.html
@@ -19,7 +19,6 @@
             USA EL CODIGO DE DESCUENTO "CHULETA" PARA TENER UN 2% DE DESCUENTO
         </div>
     </div>
-    
     <br><br>
     <!-- Boton HOME / CHULO -->
     <div class="container">
@@ -28,7 +27,7 @@
         </div>
         <!-- centro, home -->
         <div class="item">
-            <a href="pag-a-home.html">
+            <a href="index.html">
                 <img class="title-card" src="Recursos/titulo.png" alt="CHULO">
             </a>
         </div>
