--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="Recursos/home_icon.png" type="image/x-icon">
     <title>CHULO | HOME</title>
 </head>
@@ -28,7 +31,7 @@
     
             <!-- centro, home -->
             <div class="item">
-                <a href="pag-a-home.html">
+                <a href="index.html">
                     <img class="title-card"src="Recursos/titulo.png" alt="CHULO">
                 </a>
             </div>
