correccion buena ? creo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="Recursos/home_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/home_icon.png" type="image/x-icon">
     <title>CHULO | HOME</title>
 </head>
 <header>
@@ -25,21 +25,21 @@
             <!-- izq, informacion -->
             <div class="item animate__animated animate__fadeInLeft">
                 <a class="lg" href="tr-a-b.html">
-                    <img class="title-card" src="Recursos/info.png" alt="INFORMACION">
+                    <img class="title-card" src="img/info.png" alt="INFORMACION">
                 </a>
             </div>
     
             <!-- centro, home -->
             <div class="item">
                 <a href="index.html">
-                    <img class="title-card"src="Recursos/titulo.png" alt="CHULO">
+                    <img class="title-card"src="img/titulo.png" alt="CHULO">
                 </a>
             </div>
     
             <!-- der, contacto -->
             <div class="item animate__animated animate__fadeInRight">
                 <a href="tr-a-c.html">
-                    <img class="title-card" src="Recursos/contacto.png" alt="CONTACTO">
+                    <img class="title-card" src="img/contacto.png" alt="CONTACTO">
                 </a>
             </div>
         </div>
@@ -52,25 +52,25 @@
     <div class="container cuerpo suelto">
         <div class="item">
                 <div class="square wht-bg" onclick="secretoA()">
-                    <img class="stock-images"src="Recursos/stock-crocs.jpg" alt="Crocs Rosas">
+                    <img class="stock-images"src="img/stock-crocs.jpg" alt="Crocs Rosas">
                 </div>
         </div>
 
         <div class="item">
                 <div class="square wht-bg" onclick="secretoB()">
-                        <img class="stock-images"src="Recursos/stock-hat.jpg" alt="Gorra Perry">
+                        <img class="stock-images"src="img/stock-hat.jpg" alt="Gorra Perry">
                     </div>
         </div>
 
         <div class="item">
                 <div class="square wht-bg" onclick="secretoC()">
-                    <img class="stock-images"src="Recursos/stock-marioshirt.jpg" alt="Remera Mario Dab">
+                    <img class="stock-images"src="img/stock-marioshirt.jpg" alt="Remera Mario Dab">
                 </div>
         </div>
 
         <div class="item">
                <div class="square wht-bg" onclick="secretoD()">
-                    <img class="stock-images"src="Recursos/stock-pepeshirt.jpg" alt="Remera Hypers">
+                    <img class="stock-images"src="img/stock-pepeshirt.jpg" alt="Remera Hypers">
                 </div>
         </div>
     </div>
