--- a/tr-a-c.html
+++ b/tr-a-c.html
@@ -5,17 +5,17 @@
     <meta http-equiv = "refresh" content = "1; url = contacto.html" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="shortcut icon" href="clas" type="image/x-icon">
+    <link rel="shortcut icon" href="class" type="image/x-icon">
     <script src="https://kit.fontawesome.com/9ea1a752b1.js" crossorigin="anonymous"></script>
     <title>CHULO | CONTACTO</title>
 </head>
 <body class="background">
-    <img class="animate__animated animate__backInDown" src="Recursos/black.png" alt="">
+    <img class="animate__animated animate__backInDown" src="img/black.png" alt="">
     <!-- Header de la pagina -->
     <div class="container cabeza">
         <div class="item header-text">
@@ -29,21 +29,21 @@
         <!-- izq, informacion -->
         <div class="item ">
             <a href="home-informacion.html">
-                <img src="Recursos/info.png" alt="INFORMACION">
+                <img src="img/info.png" alt="INFORMACION">
             </a>
         </div>
 
         <!-- centro, home -->
         <div class="item">
             <a href="home.html">
-                <img src="Recursos/titulo.png" alt="CHULO">
+                <img src="img/titulo.png" alt="CHULO">
             </a>
         </div>
 
         <!-- der, contacto -->
         <div class="item animate__animated animate__fadeInRight">
             <a href="contact-page.html">
-                <img src="Recursos/contacto.png" alt="CONTACTO">
+                <img src="img/contacto.png" alt="CONTACTO">
             </a>
         </div>
     </div>
@@ -53,26 +53,26 @@
     <div class="container cuerpo suelto animate__animated animate__fadeOut">
         <div class="item">
             <div class="square wht-bg">
-                <img class="stock-images"src="Recursos/stock-crocs.jpg" alt="Crocs Rosas">
+                <img class="stock-images"src="img/stock-crocs.jpg" alt="Crocs Rosas">
             </div>
         </div>
 
         <div class="item">
             <div class="square wht-bg">
-                <img class="stock-images"src="Recursos/stock-hat.jpg" alt="Gorra Perry">
+                <img class="stock-images"src="img/stock-hat.jpg" alt="Gorra Perry">
             </div>
 
         </div>
 
         <div class="item">
             <div class="square wht-bg">
-                <img class="stock-images"src="Recursos/stock-marioshirt.jpg" alt="Remera Mario Dab">
+                <img class="stock-images"src="img/stock-marioshirt.jpg" alt="Remera Mario Dab">
             </div>
         </div>
 
         <div class="item">
             <div class="square wht-bg">
-                <img class="stock-images"src="Recursos/stock-pepeshirt.jpg" alt="Remera Hypers">
+                <img class="stock-images"src="img/stock-pepeshirt.jpg" alt="Remera Hypers">
             </div>
         </div>
     </div>
