--- a/contacto.html
+++ b/contacto.html
@@ -8,21 +8,20 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <link rel="shortcut icon" href="Recursos/icono-contacto.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icono-contacto.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/9ea1a752b1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="css/contact.css">
     <title>CHULO | CONTACTO</title>
 </head>
 
 <header>
     <br><br><br>
     <div class="container">
-<<<<<<< HEAD:contacto.html
         <div class="row align-items-lg-center">
             <div class="col">
             <!-- relleno para las columnas -->
@@ -30,23 +29,12 @@
             <!-- centro, home -->
             <div class="col animate__animated animate__flipInX">
                 <a href="index.html">
-                    <img class="img-fluid" src="Recursos/titulo-wht.png" alt="CHULO">
+                    <img class="img-fluid" src="img/titulo-wht.png" alt="CHULO">
                 </a>
             </div>
             <div class="col"></div>
             <!-- relleno para las columnas -->
             </div>
-=======
-        <div class="row">
-		<div class="col-lg-12">
-        	    <!-- centro, home -->
-	            <div class="col animate__animated animate__flipInX">
-        	        <a href="pag-a-home.html">
-	    	            <img class="mx-auto d-block" src="titulo-wht.png" alt="CHULO" style="width: 320px;margin=0 auto;">
-               		</a>
-		    </div>
-		</div>
->>>>>>> 26ac79cbf1559b0efc652a08b64b603e1bd20a6b:pag-c-contacto.html
         </div>
     </div>
     <br><br>
