--- a/informacion.html
+++ b/informacion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <link rel="shortcut icon" href="Recursos/home_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/home_icon.png" type="image/x-icon">
     <title>CHULO | INFORMACION</title>
 </head>
 
@@ -28,7 +28,7 @@
         <!-- centro, home -->
         <div class="item">
             <a href="index.html">
-                <img class="title-card" src="Recursos/titulo.png" alt="CHULO">
+                <img class="title-card" src="img/titulo.png" alt="CHULO">
             </a>
         </div>
         <div class="item"></div>
