contacto.html es responsive

--- a/informacion.html
+++ b/informacion.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="shortcut icon" href="img/home_icon.png" type="image/x-icon">
     <title>CHULO | INFORMACION</title>
 </head>
@@ -23,7 +21,7 @@
     <!-- Boton HOME / CHULO -->
     <div class="container">
         <div class="item">
-        <!-- relleno para las columnas -->
+            <!-- relleno para las columnas -->
         </div>
         <!-- centro, home -->
         <div class="item">
@@ -33,7 +31,7 @@
         </div>
         <div class="item"></div>
         <!-- relleno para las columnas -->
-        </div>
+    </div>
     </div>
     <br><br>
 
@@ -41,19 +39,27 @@
         <div class="item"></div>
         <div class="item">
             <div class="info-container animate__animated animate__fadeInDownBig ">
-                    <div class="item" style="font-size: 40px;">QUIEN ES CHULO ?</div>
-                    <div class="item">
-                        <div class="container dif-cont">
-                            <div class="item"></div>
-                            <div class="item"> <i> CHULO</i> es un emprendimiento creado hace 2 dias. En <i>CHULO</i> nos preocupamos mucho por el estilo personal de cada uno, por seguir las modas, por marcar tendencias; pero por sobre todo nos ocupamos de una cosa: <i>la autenticidad</i>. Lo mas importante para nosotros es que cada uno de nuestros clientes (o, como le decimos nosotros, <i> amigos </i>) pueda ser fiel a su propia esencia. Y para lograr ese objetivo, en <i>CHULO</i> vendemos 4 prendas completamente exclusivas, seleccionadas cuidadosamente y curadas por los mejores diseñadores de la Argentina. Siempre. desde siempre y para siempre, nuestra primera prioridad es <strike>tu plata</strike> tu satisfacción. <br>Comprá en <i>CHULO</i>, comprá mejor.
-                            </div>
-                            <div class="item"></div>
+                <div class="item" style="font-size: 40px;">QUIEN ES CHULO ?</div>
+                <div class="item">
+                    <div class="container dif-cont">
+                        <div class="item"></div>
+                        <div class="item"> <i> CHULO</i> es un emprendimiento creado hace 2 dias. En <i>CHULO</i> nos
+                            preocupamos mucho por el estilo personal de cada uno, por seguir las modas, por marcar
+                            tendencias; pero por sobre todo nos ocupamos de una cosa: <i>la autenticidad</i>. Lo mas
+                            importante para nosotros es que cada uno de nuestros clientes (o, como le decimos nosotros,
+                            <i> amigos </i>) pueda ser fiel a su propia esencia. Y para lograr ese objetivo, en
+                            <i>CHULO</i> vendemos 4 prendas completamente exclusivas, seleccionadas cuidadosamente y
+                            curadas por los mejores diseñadores de la Argentina. Siempre. desde siempre y para siempre,
+                            nuestra primera prioridad es <strike>tu plata</strike> tu satisfacción. <br>Comprá en
+                            <i>CHULO</i>, comprá mejor.
                         </div>
                         <div class="item"></div>
                     </div>
+                    <div class="item"></div>
                 </div>
             </div>
-        </div>  
-        <div class="item"></div>
+        </div>
     </div>
-    </body>
+    <div class="item"></div>
+    </div>
+</body>
