--- a/contacto.html
+++ b/contacto.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="shortcut icon" href="img/icono-contacto.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/9ea1a752b1.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
     <div class="container">
         <div class="row align-items-lg-center">
             <div class="col">
-            <!-- relleno para las columnas -->
+                <!-- relleno para las columnas -->
             </div>
             <!-- centro, home -->
             <div class="col animate__animated animate__flipInX">
@@ -34,46 +35,141 @@
             </div>
             <div class="col"></div>
             <!-- relleno para las columnas -->
-            </div>
         </div>
+    </div>
     </div>
     <br><br>
 </header>
 
-<body style="background-color: black;">
-    <div class="container" style="color: whitesmoke; font-family: 'Roboto', 'sans-serif';">
-        <form name="formulario">
-            <div class="row align-items-sm-center">
-                <div class="col">
-                        <div class="mb-3">
-                        <label class="form-label" style="max-width: 116; max-height: 103;">Dirección de correo</label>
-                        <input type="email"class="form-control" placeholder="nombre@ejemplo.com" id="mail">
+<body style="background-color: black; font-family: 'roboto';">
+    <!--Section: Contact v.2-->
+    <section class="mb-4" style="color: white;">
+
+        <!--Section heading-->
+        <h2 class="h1-responsive font-weight-bold text-center my-4">CONTACTANOS</h2>
+        <!--Section description-->
+        <p class="text-center w-responsive mx-auto mb-5">Tenes alguna pregunta? Hacenosla aca abajo y en una cuestion de
+            meses te la contestamos! :)</p>
+
+        <div class="row">
+
+            <!--Grid column-->
+            <div class="col-md-9 mb-md-0 mb-5 " style="padding-left: 50px;">
+                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="text" id="name" name="name" class="form-control">
+                                <label for="name" class=""><i>tu nombre</i></label>
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
+
+                        <!--Grid column-->
+                        <div class="col-md-6">
+                            <div class="md-form mb-0">
+                                <input type="text" id="mail" name="email" class="form-control">
+                                <label for="email" class=""><i>tu correo</i></label>
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
                     </div>
-                    <div class="mb-3">
-                        <label class="form-label">Mandanos un mensaje!</label>
-                        <textarea class="form-control" rows="3" id= 'msg' name="comentario"></textarea> 
-                    </div> 
-                </div>
-            </div>
-            <div class="row align-items-sm-start">
-                <div class="mb-3">
-                    <div class="col">
-                        <button onclick='return sendMail(); popupUploadForm();' type='submit' class="btn btn-outline-light btn-lg" id='btn'>
-                            Enviar
-                        </button>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="md-form mb-0">
+                                <input type="text" id="subject" name="subject" class="form-control">
+                                <label for="subject" class=""><i>asunto</i></label>
+                            </div>
+                        </div>
                     </div>
+                    <!--Grid row-->
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!--Grid column-->
+                        <div class="col-md-12">
+
+                            <div class="md-form">
+                                <textarea type="text" id="message" name="message" rows="2"
+                                    class="form-control md-textarea"></textarea>
+                                <label for="message"><i>tu mensaje</i></label>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!--Grid row-->
+
+                </form>
+
+                <div class="text-center text-md-left">
+                    <a class="btn btn-primary" onclick="validateForm();">ENVIAR <i class="fas fa-check-circle"></i></a>
                 </div>
+                <div class="status"></div>
             </div>
-        </form>
-        <div class="row align-items-sm-center" id="validated" hidden>
-            <div class="col">
-                <div class="mb-3">    
-                    <h1 class="display-5"><i class="fas fa-check"></i> Tu mensaje fue enviado!</h1>
-                </div> 
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-3 text-center">
+                <ul class="list-unstyled mb-0">
+                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                        <p>CABA, Buenos Aires 1425, ARG</p>
+                    </li>
+
+                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                        <p>+ 01 234 567 89</p>
+                    </li>
+
+                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                        <p>jcalvi@trucho.com</p>
+                    </li>
+                </ul>
             </div>
+            <!--Grid column-->
+
         </div>
-    </div>
-    <script type='text/javascript' src="js/form.js"></script>
+
+    </section>
+    <script>
+        function validateForm() {
+            var name = document.getElementById('name').value;
+            if (name == "") {
+                document.querySelector('.status').innerHTML = "El nombre no puede estar vacio.";
+                return false;
+            }
+            var email = document.getElementById('email').value;
+            if (email == "") {
+                document.querySelector('.status').innerHTML = "El correo no puede estar vacio.";
+                return false;
+            } else {
+                var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+                if (!re.test(email)) {
+                    document.querySelector('.status').innerHTML = "Formato de correo invalido.";
+                    return false;
+                }
+            }
+            var subject = document.getElementById('subject').value;
+            if (subject == "") {
+                document.querySelector('.status').innerHTML = "El asunto no puede estar vacio";
+                return false;
+            }
+            var message = document.getElementById('message').value;
+            if (message == "") {
+                document.querySelector('.status').innerHTML = "El mensaje no puede estar vacio";
+                return false;
+            }
+            document.querySelector('.status').innerHTML = "Enviando...";
+        }
+    </script>
 </body>
 
 </html>
